[project]
name = "week2"
version = "0.1.0"
description = "AI Modeling Practice"
authors = [
    {name = "sss3593@naver.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pycocoevalcap (>=1.2,<2.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pytorch-lightning (>=2.6.1,<3.0.0)",
    "transformers (>=4.30.0)",
    "datasets (==2.16.0)",
    "lightning (>=2.0.0)",
    "torchmetrics (>=0.11.0)",
    "clip @ git+https://github.com/openai/CLIP.git",
    "clearml (>=2.1.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

